--- a/code/Tennis.ipynb
+++ b/code/Tennis.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,38 +161,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "from Agent import Agent\n",
+    "from unityagents import UnityEnvironment\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import pickle\n",
+    "\n",
+    "TRAIN_MODE = True\n",
+    "\n",
+    "scores_window = deque(maxlen=100)\n",
+    "all_scores = []\n",
+    "i_episode = 1\n",
+    "print('\\nTraining the Agents...\\n')\n",
+    "\n",
+    "#we could train one agent against itself by flipping the x on position and velocity of the paddle.\n",
+    "#so we train one agent but for the second observation we flip the x [-1,1,-1,1,-1,1,-1,1]*3\n",
+    "agent = Agent(state_size, action_size, seed=0)\n",
+    "state_mask = [-1,1]*12\n",
+    "while True:\n",
+    "        env_info = env.reset(train_mode=TRAIN_MODE)[brain_name]\n",
+    "        states = env_info.vector_observations\n",
+    "        states[1] = states[1]*state_mask\n",
+    "        scores = [0]*num_agents\n",
+    "        while True:\n",
+    "\n",
+    "            #call get action twice on the same agent, the second state is flipped.\n",
+    "            #actions are relative to the net so no need to flip returned actions\n",
+    "            actions = [agent.get_action(state,add_noise=TRAIN_MODE) for state in states]\n",
+    "\n",
+    "            env_info = env.step(np.concatenate(actions,axis=0))[brain_name]\n",
+    "            next_states = env_info.vector_observations\n",
+    "            \n",
+    "            #flip the second state\n",
+    "            next_states[1] = next_states[1]*state_mask\n",
+    "            rewards = env_info.rewards\n",
+    "            dones = env_info.local_done\n",
+    "\n",
+    "            #then step the agent twice\n",
+    "            for i in range(num_agents):\n",
+    "                agent.step(states[i],actions[i],rewards[i],next_states[i],dones[i])\n",
+    "\n",
+    "            for i,s in enumerate(rewards):\n",
+    "                scores[i] += s\n",
+    "                \n",
+    "            states = next_states\n",
+    "            if np.any(dones):\n",
+    "                break\n",
+    "                \n",
+    "        scores_window.append(scores)\n",
+    "        all_scores.append(scores)\n",
+    "        max_score = np.max([np.mean([x[i] for x in scores_window]) for i in range(num_agents)])\n",
+    "        \n",
+    "        if i_episode % 1000 == 0:\n",
+    "            print('Average score (max over agents) at episode {} : {:.4f}'.format(i_episode, max_score))\n",
+    "            \n",
+    "        if  max_score >= 0.5:\n",
+    "            print('The agent solved the environment after {} episodes with a score of score {:.4f}'.format(i_episode-100, max_score))\n",
+    "            torch.save(agent.actor_local.state_dict(), 'actor_checkpoint.pth'.format(i_episode))\n",
+    "            torch.save(agent.critic_local.state_dict(), 'critic_checkpoint.pth'.format(i_episode))\n",
+    "            with open('scores.pkl','wb') as f:\n",
+    "                pickle.dump(all_scores,f)\n",
+    "            break\n",
+    "            \n",
+    "        i_episode+=1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.Observing the trained agent\n",
+    "\n",
+    "Now we can observe the trained agents and see how it preformes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score (max over agents) from episode 1: 0.09000000171363354\n",
-      "Score (max over agents) from episode 2: 0.0\n",
-      "Score (max over agents) from episode 3: 0.0\n",
-      "Score (max over agents) from episode 4: 0.0\n",
-      "Score (max over agents) from episode 5: 0.0\n"
+      "You obtained a score of: 0.0900\n"
      ]
     }
    ],
    "source": [
-    "for i in range(1, 6):                                      # play game for 5 episodes\n",
-    "    env_info = env.reset(train_mode=False)[brain_name]     # reset the environment    \n",
-    "    states = env_info.vector_observations                  # get the current state (for each agent)\n",
-    "    scores = np.zeros(num_agents)                          # initialize the score (for each agent)\n",
-    "    while True:\n",
-    "        actions = np.random.randn(num_agents, action_size) # select an action (for each agent)\n",
-    "        actions = np.clip(actions, -1, 1)                  # all actions between -1 and 1\n",
-    "        env_info = env.step(actions)[brain_name]           # send all actions to tne environment\n",
-    "        next_states = env_info.vector_observations         # get next state (for each agent)\n",
-    "        rewards = env_info.rewards                         # get reward (for each agent)\n",
-    "        dones = env_info.local_done                        # see if episode finished\n",
-    "        scores += env_info.rewards                         # update the score (for each agent)\n",
-    "        states = next_states                               # roll over states to next time step\n",
-    "        if np.any(dones):                                  # exit loop if episode finished\n",
-    "            break\n",
-    "    print('Score (max over agents) from episode {}: {}'.format(i, np.max(scores)))"
+    "from collections import deque\n",
+    "from Agent import Agent\n",
+    "from unityagents import UnityEnvironment\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import pickle\n",
+    "    \n",
+    "TRAIN_MODE = False\n",
+    "\n",
+    "env_info = env.reset(train_mode=TRAIN_MODE)[brain_name]\n",
+    "agent = Agent(state_size, action_size, seed=0)\n",
+    "\n",
+    "#Load trained weights\n",
+    "#Weights were trained on the GPU. Need to convert for cpu\n",
+    "agent.actor_local.load_state_dict(torch.load('actor_checkpoint.pth',map_location={'cuda:0': 'cpu'}))\n",
+    "agent.critic_local.load_state_dict(torch.load('critic_checkpoint.pth',map_location={'cuda:0': 'cpu'}))\n",
+    "\n",
+    "scores = [0]*num_agents\n",
+    "state_mask = [-1,1]*12\n",
+    "states = env_info.vector_observations\n",
+    "states[1] *= state_mask\n",
+    "\n",
+    "while True:\n",
+    "    actions = [agent.get_action(state,add_noise=TRAIN_MODE) for state in states]\n",
+    "    env_info = env.step(np.concatenate(actions,axis=0))[brain_name]\n",
+    "    next_states = env_info.vector_observations\n",
+    "    next_states[1] *= state_mask\n",
+    "    rewards = env_info.rewards\n",
+    "    dones = env_info.local_done\n",
+    "    for i,s in enumerate(rewards):\n",
+    "        scores[i] += s\n",
+    "    if np.any(dones):\n",
+    "        break\n",
+    "    states = next_states\n",
+    "    \n",
+    "max_score = np.max(scores)\n",
+    "print('You obtained a score of: {:.4f}'.format(max_score))"
    ]
   },
   {
@@ -204,23 +302,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "env.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4. It's Your Turn!\n",
-    "\n",
-    "Now it's your turn to train your own agent to solve the environment!  When training the environment, set `train_mode=True`, so that the line for resetting the environment looks like the following:\n",
-    "```python\n",
-    "env_info = env.reset(train_mode=True)[brain_name]\n",
-    "```"
    ]
   },
   {
