Updated Juipter notebook with trained agent.

--- a/code/Tennis.ipynb
+++ b/code/Tennis.ipynb
@@ -173,6 +173,9 @@
     "import pickle\n",
     "\n",
     "TRAIN_MODE = True\n",
+    "EPS_START = 1.0\n",
+    "EPS_END = 0.01\n",
+    "EPS_DECAY = 0.995\n",
     "\n",
     "scores_window = deque(maxlen=100)\n",
     "all_scores = []\n",
@@ -183,52 +186,52 @@
     "#so we train one agent but for the second observation we flip the x [-1,1,-1,1,-1,1,-1,1]*3\n",
     "agent = Agent(state_size, action_size, seed=0)\n",
     "state_mask = [-1,1]*12\n",
+    "eps = EPS_START\n",
     "while True:\n",
     "        env_info = env.reset(train_mode=TRAIN_MODE)[brain_name]\n",
     "        states = env_info.vector_observations\n",
     "        states[1] = states[1]*state_mask\n",
     "        scores = [0]*num_agents\n",
     "        while True:\n",
-    "\n",
-    "            #call get action twice on the same agent, the second state is flipped.\n",
-    "            #actions are relative to the net so no need to flip returned actions\n",
-    "            actions = [agent.get_action(state,add_noise=TRAIN_MODE) for state in states]\n",
-    "\n",
+    "            \n",
+    "            #call get action twice on the same agent, the second state is transformed.\n",
+    "            #actions are relative to the net, no need to transform returned actions\n",
+    "            actions = [agent.get_action(state,eps,add_noise=TRAIN_MODE) for state in states]\n",
     "            env_info = env.step(np.concatenate(actions,axis=0))[brain_name]\n",
     "            next_states = env_info.vector_observations\n",
-    "            \n",
-    "            #flip the second state\n",
-    "            next_states[1] = next_states[1]*state_mask\n",
+    "            next_states[1]*=state_mask\n",
     "            rewards = env_info.rewards\n",
     "            dones = env_info.local_done\n",
     "\n",
-    "            #then step the agent twice\n",
+    "            #step the agent twice\n",
     "            for i in range(num_agents):\n",
     "                agent.step(states[i],actions[i],rewards[i],next_states[i],dones[i])\n",
     "\n",
     "            for i,s in enumerate(rewards):\n",
     "                scores[i] += s\n",
-    "                \n",
     "            states = next_states\n",
     "            if np.any(dones):\n",
     "                break\n",
     "                \n",
     "        scores_window.append(scores)\n",
     "        all_scores.append(scores)\n",
-    "        max_score = np.max([np.mean([x[i] for x in scores_window]) for i in range(num_agents)])\n",
+    "        average_scores = [np.mean([x[i] for x in scores_window]) for i in range(num_agents)]\n",
+    "        max_score = np.max(average_scores)\n",
     "        \n",
     "        if i_episode % 1000 == 0:\n",
     "            print('Average score (max over agents) at episode {} : {:.4f}'.format(i_episode, max_score))\n",
+    "            print('Agent 0: {:.4f}\\tAgent 1: {:.4f}'.format(*average_scores)) \n",
     "            \n",
     "        if  max_score >= 0.5:\n",
     "            print('The agent solved the environment after {} episodes with a score of score {:.4f}'.format(i_episode-100, max_score))\n",
-    "            torch.save(agent.actor_local.state_dict(), 'actor_checkpoint.pth'.format(i_episode))\n",
-    "            torch.save(agent.critic_local.state_dict(), 'critic_checkpoint.pth'.format(i_episode))\n",
+    "            torch.save(agent.actor_local.state_dict(), 'actor_checkpoint.pth')\n",
+    "            torch.save(agent.critic_local.state_dict(), 'critic_checkpoint.pth')\n",
     "            with open('scores.pkl','wb') as f:\n",
     "                pickle.dump(all_scores,f)\n",
     "            break\n",
     "            \n",
-    "        i_episode+=1"
+    "        i_episode+=1\n",
+    "        eps = max(EPS_END,EPS_DECAY*eps)"
    ]
   },
   {
@@ -242,14 +245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You obtained a score of: 0.2000\n"
+      "You obtained a score of: 1.7000\n"
      ]
     }
    ],
