Fixed spelling and grammer.

--- a/code/Tennis.ipynb
+++ b/code/Tennis.ipynb
@@ -182,8 +182,8 @@
     "i_episode = 1\n",
     "print('\\nTraining the Agents...\\n')\n",
     "\n",
-    "#we could train one agent against itself by flipping the x on position and velocity of the paddle.\n",
-    "#so we train one agent but for the second observation we flip the x [-1,1,-1,1,-1,1,-1,1]*3\n",
+    "#We could train one agent against itself by flipping the x on position and velocity of the paddle and ball.\n",
+    "#We train one agent but for the second observation we transform the state by [-1,1,-1,1,-1,1,-1,1]*3\n",
     "agent = Agent(state_size, action_size, seed=0)\n",
     "state_mask = [-1,1]*12\n",
     "eps = EPS_START\n",
@@ -194,8 +194,8 @@
     "        scores = [0]*num_agents\n",
     "        while True:\n",
     "            \n",
-    "            #call get action twice on the same agent, the second state is transformed.\n",
-    "            #actions are relative to the net, no need to transform returned actions\n",
+    "            #Call get action twice on the same agent, the second state is transformed.\n",
+    "            #Actions are relative to the net, no need to transform returned actions\n",
     "            actions = [agent.get_action(state,eps,add_noise=TRAIN_MODE) for state in states]\n",
     "            env_info = env.step(np.concatenate(actions,axis=0))[brain_name]\n",
     "            next_states = env_info.vector_observations\n",
@@ -203,7 +203,7 @@
     "            rewards = env_info.rewards\n",
     "            dones = env_info.local_done\n",
     "\n",
-    "            #step the agent twice\n",
+    "            #Step the agent twice\n",
     "            for i in range(num_agents):\n",
     "                agent.step(states[i],actions[i],rewards[i],next_states[i],dones[i])\n",
     "\n",
