Updated Jupyter Notebook output.

--- a/code/Tennis.ipynb
+++ b/code/Tennis.ipynb
@@ -245,9 +245,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You obtained a score of: 2.6000\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import deque\n",
     "from Agent import Agent\n",
@@ -303,13 +311,6 @@
    "source": [
     "env.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
